# alphalaw

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_RU.md  TODO.md  paper_alpha_law.md  paper_en.md  paper_ru.md  push.sh  pyproject.toml
alphalaw/: __init__.py  __main__.py  calculator.py  cli.py  data.py  pyproject.toml  web.py
alphalaw/.pytest_cache/v/cache/: lastfailed  nodeids
alphalaw/tests/: test_calculator.py
artifacts/: FINAL_CONCLUSION.md  alpha_law_d_block.md  alpha_law_vortex_model.md  alpha_verification_2026_04_10.md  analytical_hv_formula.md  building_blocks.md  consequences.md  cross_scale_alpha_matches.md  directions_results.md  hypotheses_phase4.md  law_of_seed.md  level4_solution.md  level5_solution.md  level6_solution.md  mp_elastic_data.json  paper_alpha_law.md  paper_materials_draft.md  paper_outline.md  parameter_compression.md  peer_review.md  phase2_plan.md  practical_applications.md  preregistered_crossscale.md  project_vision.md  sciagents_full_report.md  sciagents_manual.md  unified_model.md  vortex_binding_mechanism.md  vortex_cymatics_research_v2.md  vortex_interaction_complete.md
docs/: PROJECT_STATUS.md
research/: FINAL_CONCLUSION.md  as_above_so_below_7scales.md  paper_draft.md
researchclaw/: cli.py  config.py  prompts.py
scripts/: alpha137_investigation.py  alpha_correction.py  alpha_d_block.py  alpha_d_block_v2.py  alpha_vs_coordination.py  alpha_vs_temperature.py  bridge_grebennikov_alphalaw.py  charge_mass_ratio.py  check_phi_boundary.py  check_phi_boundary_v2.py  classify_v4_100pct.py  classify_v5_spectrum.py  classify_v6_frequencies.py  cluster_geometry.py  coefficients_and_hydro.py  compressible_vortex.py  confinement.py  cross_scale_monte_carlo.py  deep_and_wide.py  deformation_and_composite.py  derive_6pi5.py  derive_N_equals_pi.py  derive_alpha.py  derive_electron_mass.py  energy_ratios.py  (+64 more)
(+310 files in other folders)
