[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "alphalaw"
version = "1.0.0"
description = "Bond Order Scaling Rule: E(n) = E₁ × n^α calculator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Yuri Kazin", email = "yuri@kazin.ru"}]
keywords = ["chemistry", "bond-energy", "power-law", "materials-science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["scipy>=1.10"]

[project.optional-dependencies]
web = ["streamlit>=1.30", "altair>=5.0", "pandas>=2.0"]

[project.scripts]
alphalaw = "alphalaw.cli:main"

[project.urls]
Repository = "https://github.com/fb15649/alphalaw"
