[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "alphalaw"
version = "0.1.0"
description = "Reserve Law of Chemical Bonding: E(n) = E₁ × n^α calculator"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Y. Kazin"},
]
keywords = ["chemistry", "bond-energy", "power-law", "materials-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "scipy>=1.10",
]

[project.scripts]
alphalaw = "alphalaw.cli:main"

[project.urls]
Repository = "https://github.com/ykazin/alphalaw"
